# twitter-ml-classification-model

./: Cargo.toml  README.md  guardrail_rules.yaml  pyproject.toml
src/: artifact.rs  cli.rs  commands.rs  context.rs  data.rs  lib.rs  main.rs  metrics.rs  model.rs  nb.rs  tests.rs  text.rs
tools/: annotate_from_rubric.py  audit_actionable_queue.py  autofill_contextual_queue_from_human_reviews.py  build_borderline_review_queue.py  build_contextual_relabel_queue.py  build_guardrail_hard_negative_train.py  build_relabel_queue.py  build_review_disagreement_queue.py  check_known7_regression.py  diff_report.py  evaluate_model_parity.py  export_final_queues.sh  fill_contextual_relabel_queue_assistant.py  full_guardrailed_inference.sh  generate_model_manifest.py  make_binary_and_split.py  merge_reviewed_queue_into_training_csv.py  normalize_raw_comments_csv.py  policy_guardrail_with_rules.py  qa_validator.py  raw_comments_smoke_test.sh  rebuild_target.py  run_binary_pipeline.sh  run_finetune_sweep.sh  run_finetune_track.sh  split_binary_with_mining_pool.py
