[package]
name = "classifier"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
csv = "1.4.0"
once_cell = "1.21.4"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "0.7"
unicode-normalization = "0.1.25"
rayon = "1.7.0"
rand = "0.8.5"
tempfile = "3.6.0"
clap = { version = "4.6.1", features = ["derive"] }
